# diffdrive_gazebo_plugin

./: .travis.yml  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  stack.xml
include/diffdrive_gazebo_plugin/: gazebo_ros_diffdrive_uos.h
include/kurt_gazebo_plugins/: gazebo_ros_kurt.h
src/: gazebo_ros_diffdrive_uos.cpp  gazebo_ros_kurt.cpp
